<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="170dp"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_shape_rounded_stroke_rect_dark_blue"
    android:elevation="@dimen/cardview_default_elevation"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/cover_image_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:adjustViewBounds="true"
            tools:srcCompat="@drawable/img_movies_cover_avengers"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_gradient_mask"
            app:layout_constraintTop_toTopOf="@+id/cover_image_view"
            app:layout_constraintBottom_toBottomOf="@+id/cover_image_view"
            app:layout_constraintStart_toStartOf="@+id/cover_image_view"
            app:layout_constraintEnd_toEndOf="@+id/cover_image_view" />

        <TextView
            android:id="@+id/age_limit_text_view"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/white"
            tools:text="@string/age_rating"
            android:background="@drawable/bg_shape_rounded_heavy_rect_dark_blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="8dp"
            app:srcCompat="@drawable/ic_like"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/movies_list_film_genre_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_vertical|start"
            android:textSize="8sp"
            android:textColor="@color/radical_red"
            android:text="@string/film_genre"
            app:layout_constraintBottom_toTopOf="@+id/movie_reviews_count_text"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SmallSp" />

        <RatingBar
            android:id="@+id/rating_bar"
            style="@style/RatingBar.CustomStars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:numStars="5"
            tools:rating="4"
            app:layout_constraintTop_toTopOf="@+id/movie_reviews_count_text"
            app:layout_constraintBottom_toBottomOf="@+id/movie_reviews_count_text"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/movie_reviews_count_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical|start"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="8sp"
            android:textColor="@color/silver_chalice"
            tools:text="@string/review_count"
            app:layout_constraintStart_toEndOf="@+id/rating_bar"
            app:layout_constraintBottom_toBottomOf="@+id/cover_image_view"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/movies_list_film_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_vertical|start"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/white"
            tools:text="@string/avengers_end_game_name"
            app:layout_constraintTop_toBottomOf="@+id/cover_image_view"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/movie_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_vertical|start"
            android:textSize="8sp"
            android:textColor="@color/silver_chalice"
            tools:text="137 MIN"
            app:layout_constraintTop_toBottomOf="@+id/movies_list_film_name_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>