<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/mirage">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/root_left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="12dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/root_right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/root_top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="56dp" />

    <ImageView
        android:id="@+id/sight_image_view"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toBottomOf="@id/root_top_guideline"
        app:layout_constraintStart_toEndOf="@id/root_left_guideline"
        app:srcCompat="@drawable/ic_sight"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/movies_list_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/movies_list"
        android:textColor="@color/gallery"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/sight_image_view"
        app:layout_constraintBottom_toBottomOf="@+id/sight_image_view"
        app:layout_constraintEnd_toStartOf="@id/root_right_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/sight_image_view" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/movies_list_item_container"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg_shape_rounded_stroke_rect_dark_blue"
        android:elevation="@dimen/cardview_default_elevation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/movies_list_header_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/img_movies_cover_avengers"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_gradient_mask"
            app:layout_constraintTop_toTopOf="@+id/movies_list_header_image"
            app:layout_constraintBottom_toBottomOf="@+id/movies_list_header_image"
            app:layout_constraintStart_toStartOf="@+id/movies_list_header_image"
            app:layout_constraintEnd_toEndOf="@+id/movies_list_header_image" />

        <TextView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:text="@string/age_rating"
            android:background="@drawable/bg_shape_rounded_heavy_rect_dark_blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="8dp"
            app:srcCompat="@drawable/ic_like"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/movies_list_film_genre_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_vertical|start"
            android:textSize="8sp"
            android:textColor="@color/radical_red"
            android:text="@string/film_genre"
            app:layout_constraintBottom_toTopOf="@+id/movie_reviews_count_text"
            app:layout_constraintStart_toStartOf="parent" />

        <RatingBar
            android:id="@+id/rating_bar"
            style="@style/RatingBar.CustomStars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:numStars="5"
            android:rating="4"
            app:layout_constraintTop_toTopOf="@+id/movie_reviews_count_text"
            app:layout_constraintBottom_toBottomOf="@+id/movie_reviews_count_text"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/movie_reviews_count_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical|start"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="8sp"
            android:textColor="@color/silver_chalice"
            android:text="@string/review_count"
            app:layout_constraintStart_toEndOf="@+id/rating_bar"
            app:layout_constraintBottom_toBottomOf="@+id/movies_list_header_image" />

        <TextView
            android:id="@+id/movies_list_film_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_vertical|start"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/avengers_end_game_name"
            app:layout_constraintTop_toBottomOf="@+id/movies_list_header_image"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/movies_list_film_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_vertical|start"
            android:textSize="8sp"
            android:textColor="@color/silver_chalice"
            android:text="@string/film_time"
            app:layout_constraintTop_toBottomOf="@+id/movies_list_film_name_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>